# basic_qsar

./: .gitignore  README.md  main.py  pyproject.toml
