[project]
name = "basic-qsar"
version = "0.1.0"
description = "Basic QSAR workflow"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datamol>=0.12.5",
    "marimo>=0.23.13",
    "matplotlib>=3.11.0",
    "molfeat>=0.11.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "wget>=3.2",
]
